@@ -19,8 +19,8 @@ import io.aiven.klaw.model.SchemaRequestModel;
 import io.aiven.klaw.model.enums.ApiResultStatus;
 import java.sql.Timestamp;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.MethodOrderer;
@@ -100,11 +100,11 @@ public class SchemaRegistryControllerServiceTest {
     when(handleDbRequests.getAllSchemaRequests(anyBoolean(), anyString(), anyInt()))
         .thenReturn(getSchemasReqs());
     when(rolesPermissionsControllerService.getApproverRoles(anyString(), anyInt()))
-        .thenReturn(Arrays.asList(""));
+        .thenReturn(List.of(""));
     when(commonUtilsService.getEnvsFromUserId(anyString()))
-        .thenReturn(Collections.singletonList("1"));
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(handleDbRequests.selectAllUsersInfoForTeam(anyInt(), anyInt()))
-        .thenReturn(Arrays.asList(userInfo));
+        .thenReturn(List.of(userInfo));
     when(handleDbRequests.selectEnvDetails(anyString(), anyInt())).thenReturn(this.env);
     when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
     when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("teamname");
@@ -162,7 +162,7 @@ public class SchemaRegistryControllerServiceTest {
     when(handleDbRequests.updateSchemaRequest(any(), anyString()))
         .thenReturn(ApiResultStatus.SUCCESS.value);
     when(commonUtilsService.getEnvsFromUserId(anyString()))
-        .thenReturn(Collections.singletonList("1"));
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
 
@@ -190,7 +190,7 @@ public class SchemaRegistryControllerServiceTest {
     when(handleDbRequests.updateSchemaRequest(any(), anyString()))
         .thenReturn(ApiResultStatus.SUCCESS.value);
     when(commonUtilsService.getEnvsFromUserId(anyString()))
-        .thenReturn(Collections.singletonList("1"));
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
 
@@ -248,7 +248,7 @@ public class SchemaRegistryControllerServiceTest {
 
     stubUserInfo();
     when(commonUtilsService.getEnvsFromUserId(anyString()))
-        .thenReturn(Collections.singletonList("1"));
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
     when(handleDbRequests.requestForSchema(any())).thenReturn(ApiResultStatus.SUCCESS.value);
@@ -273,7 +273,7 @@ public class SchemaRegistryControllerServiceTest {
 
     stubUserInfo();
     when(commonUtilsService.getEnvsFromUserId(anyString()))
-        .thenReturn(Collections.singletonList("1"));
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
     when(handleDbRequests.requestForSchema(any()))
@@ -312,6 +312,7 @@ public class SchemaRegistryControllerServiceTest {
   private void stubUserInfo() {
     when(handleDbRequests.getUsersInfo(anyString())).thenReturn(userInfo);
     when(userInfo.getTeamId()).thenReturn(101);
+    when(userInfo.getRole()).thenReturn("USER");
     when(mailService.getUserName(any())).thenReturn("kwusera");
   }
 }
